[altall] A *lot* of work on the compiler
Most of it is ported over from the old transpiler code and is still untested.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ target_compile_definitions(altall PRIVATE ${LLVM_DEFINITIONS_LIST})
 
 target_link_libraries(altall PUBLIC altacore)
 target_link_libraries(altall PRIVATE picosha2)
-llvm_config(altall support core codegen AllTargetsCodeGens)
+llvm_config(altall support core codegen AllTargetsCodeGens bitwriter)
 
 # credit to Austin Lasher (https://medium.com/@alasher/colored-c-compiler-output-with-ninja-clang-gcc-10bfe7f2b949)
 option(FORCE_COLORED_OUTPUT "Always produce ANSI-colored output (GNU/Clang only)." TRUE)
