Add new `inheritance` example

--- a/examples/package.alta.yaml
+++ b/examples/package.alta.yaml
@@ -31,3 +31,6 @@ targets:
 - name: generator-test
   main: generator-test.alta
   type: exe
+- name: inheritance
+  main: inheritance.alta
+  type: exe
